--- a/journal.html
+++ b/journal.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sample Site</title>
-<!--link to css and javascript here-->
+	<link rel='stylesheet' href='style.css'/>
+	<script src='script.js'></script>
 </head>
-
 <body>
-
+        <img src="http://cdn.shopify.com/s/files/1/0572/6305/products/leather-journal-cover-oberon-design-jlcm06navy_c_large.png?v=1414782849" alt="Mountain View" style="width:400px;">
 </body>
 </html>
